# nuclearjamgame

./: .gitignore  .gitmodules  CMakeLists.txt
games/: CMakeLists.txt
games/jam/: CMakeLists.txt
games/jam/res/: grass.xcf  selector.xcf  test.json  world.xcf
games/jam/res/buildings/: bighouse.xcf  coal_plant.xcf  house_deco.xcf  house_wall.xcf  nuclear_plant.xcf  power_tower.xcf  shop.xcf  solar.xcf  town_hall.xcf
games/jam/src/: buildings.h  main.cc  util.cc  util.h
src/: core.cc  core.h  gui_shader.h  lib.cc  lib.h  packer.cc  render.cc  render.h  resource.cc  resource.h  resource_dec.cc  resource_enc.cc  shader.cc  shader.h  util.cc  util.h  window.cc  window.h  world_shader.h
